--- a/app/index.html
+++ b/app/index.html
@@ -2,154 +2,41 @@
 <html lang="th">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERTEX TECHNOLOGY PLUS</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>VERTEX TECHNOLOGY PLUS</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <header class="main-header">
-        <nav class="main-nav">
-            <div class="container nav-container">
-                <a href="index.html" class="nav-logo">
-                    <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
-                    <span>VERTEX TECHNOLOGY PLUS</span>
-                </a>
-                <div class="nav-links">
-                    <a href="index.html" class="active">หน้าหลัก</a>
-                    <a href="about.html">เกี่ยวกับเรา</a>
-                    <!-- <a href="services.html">บริการของเรา</a> -->
-                    <a href="contact.html">ติดต่อเรา</a>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <main>
-        <section class="hero-slide">
-            <div class="hero-content">
-                <h1>VERTEX TECHNOLOGY PLUS</h1>
-                <p>ผู้นำด้านบริการติดตั้งโซล่าเซลล์และพลังงานสะอาดครบวงจร</p>
-                <a href="#services" class="btn btn-primary">ดูบริการของเรา</a>
-            </div>
-        </section>
-
-        <section id="about" class="about-section">
-            <div class="container">
-                <h2>ที่มาและผลงานของเรา</h2>
-                <div class="about-layout">
-                    <div class="about-text">
-                        <h3>ที่มาของเรา</h3>
-                        <p>เราคือ VERTEX TECHNOLOGY PLUS CO, LTD ผู้เชี่ยวชาญด้านพลังงานหมุนเวียน พร้อมให้บริการครบวงจร
-                            (One Stop Service) ตั้งแต่ออกแบบ, ติดตั้ง, และซ่อมบำรุงระบบโซลาร์เซลล์
-                            ด้วยทีมงานวิศวกรมืออาชีพและรับประกันผลงานยาวนานถึง 25 ปี</p>
-                    </div>
-                    <div class="about-portfolio">
-                        <h3>ตัวอย่างผลงาน</h3>
-                        <div class="portfolio-grid">
-                            <img src="img/example-work1.jpg" alt="ผลงานการติดตั้ง 1">
-                            <img src="img/example-work2.jpg" alt="ผลงานการติดตั้ง 2">
-                            <img src="img/example-work3.jpg" alt="ผลงานการติดตั้ง 3">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="services" class="promotions-section">
-            <div class="container">
-                <h2>บริการของเรา</h2>
-                <div class="promo-grid">
-             
-            </div>
-
-
-
-            <div class="container">
-                <h2>โปรโมชั่นสุดพิเศษ</h2>
-                <div class="promotions-grid" id="special-promotions-container">
-
-                    <div class="promotion-card">
-                        
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <section id="knowledge" class="knowledge-section">
-            <div class="container">
-                <h2>เกร็ดความรู้น่าสนใจ</h2>
-                <div class="faq-list">
-                    <div class="faq-item">
-                        <h4>โซล่าเซลล์ทำงานอย่างไร?</h4>
-                        <p>แผงโซล่าเซลล์จะรับพลังงานแสงอาทิตย์และเปลี่ยนเป็นไฟฟ้ากระแสตรง (DC)
-                            จากนั้นอินเวอร์เตอร์จะแปลงเป็นไฟฟ้ากระแสสลับ (AC) เพื่อให้เครื่องใช้ไฟฟ้าในบ้านใช้งานได้</p>
-                    </div>
-                    <div class="faq-item">
-                        <h4>การติดตั้งใช้เวลานานแค่ไหน?</h4>
-                        <p>โดยทั่วไปสำหรับบ้านพักอาศัยจะใช้เวลาติดตั้งประมาณ 1-3 วัน
-                            ขึ้นอยู่กับขนาดของระบบและความซับซ้อนของหน้างาน</p>
-                    </div>
-                    <div class="faq-item">
-                        <h4>คุ้มค่ากับการลงทุนหรือไม่?</h4>
-                        <p>คุ้มค่าแน่นอน โดยทั่วไปมีระยะเวลาคืนทุนเฉลี่ย 5-7 ปี
-                            หลังจากนั้นคือการใช้ไฟฟ้าฟรีไปตลอดอายุการใช้งานของแผงซึ่งยาวนานกว่า 25 ปี</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="why-solar" class="why-solar-section">
-            <div class="container">
-                <h2>ทำไมถึงควรติดตั้งโซล่าเซลล์กับเรา?</h2>
-                <div class="benefits-grid">
-                    <div class="benefit-item">
-                        <span class="benefit-icon">💰</span>
-                        <h3>ประหยัดค่าไฟ</h3>
-                        <p>ลดภาระค่าไฟฟ้าได้อย่างมีนัยสำคัญตั้งแต่เดือนแรกที่ติดตั้ง</p>
-                    </div>
-                    <div class="benefit-item">
-                        <span class="benefit-icon">🌍</span>
-                        <h3>พลังงานสะอาด</h3>
-                        <p>เป็นมิตรต่อสิ่งแวดล้อม ลดการปล่อยก๊าซคาร์บอนไดออกไซด์</p>
-                    </div>
-                    <div class="benefit-item">
-                        <span class="benefit-icon">📈</span>
-                        <h3>เพิ่มมูลค่าให้บ้าน</h3>
-                        <p>การติดตั้งโซล่าเซลล์เป็นการลงทุนที่ช่วยเพิ่มมูลค่าให้กับอสังหาริมทรัพย์</p>
-                    </div>
-                    <div class="benefit-item">
-                        <span class="benefit-icon">🛠️</span>
-                        <h3>รับประกันยาวนาน</h3>
-                        <p>เรากล้ารับประกันประสิทธิภาพแผงและงานติดตั้งยาวนานถึง 25 ปี</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
-
-    <footer id="contact">
-        <div class="container">
-            <h2>ช่องทางการติดต่อ</h2>
-            <p><strong>บริษัท เวอร์เทค เทคโนโลยี พลัส จำกัด</strong></p>
-            <p><strong>ที่อยู่:</strong> เลขที่ 32/31 ซอยวัดลาดปลาดุก ตำบล บางคูรัด อำเภอบางบัวทอง นนทบุรี 11110</p>
-            <!-- <p><strong>เบอร์โทรศัพท์:</strong> <a href="tel:02-123-4567">02-123-4567</a></p> -->
-            <p><strong>อีเมล:</strong> <a href="mailto:vertexplus99@gmail.com">vertexplus99@gmail.com</a></p>
-            <div class="social-links">
-                <a href  ="https://www.facebook.com/profile.php?id=61578091313541">Facebook</a>
-                <a href="https://lin.ee/5a80dQe">LINE</a>
-            </div>
-            <p class="copyright">&copy; 2025 VERTEX TECHNOLOGY PLUS CO, LTD. สงวนลิขสิทธิ์.</p>
+  <header class="main-header">
+    <nav class="main-nav">
+      <div class="container nav-container">
+        <a href="index.html" class="nav-logo">
+          <img src="img/logo-no-font.png" alt="โลโก้บริษัท">
+          <span>VERTEX TECHNOLOGY PLUS</span>
+        </a>
+        <div class="nav-links">
+          <a href="home-content.html" class="nav-link active">หน้าหลัก</a>
+          <a href="about.html" class="nav-link">เกี่ยวกับเรา</a>
+          <a href="contact.html" class="nav-link">ติดต่อเรา</a>
         </div>
-    </footer>
+      </div>
+    </nav>
+  </header>
 
-<script src="scripts.js"></script> </body>
+  <main id="app-content">
+
+  </main>
+
+
+
+  <script src="scripts.js"></script>
+</body>
 </body>
 
 </html>
